--- a/styles.css
+++ b/styles.css
@@ -99,20 +99,21 @@ body {
 
 .intro-features {
   display: grid;
-  flex-direction: column;
-  row-gap: 16px;
+  grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
+  column-gap: 34px;
+  row-gap: 10px;
 }
 
 @media screen and (min-width: 600px) {
-    .intro-features {
-        grid-template-columns: 1fr 1fr;
-      }
+  .intro-features {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 @media screen and (min-width: 900px) {
-    .intro-features {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-      }
+  .intro-features {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 }
 
 .circle {
@@ -230,43 +231,55 @@ body {
 @media screen and (min-width: 600px) {
     .pet-card {
         grid-template-columns: 1fr;
-      }
+    }
     .pet-description {
         font-size: 1.125rem;
-      }
+    }
     .pet-card-text {
         padding: 20px 30px;
     }
 
     .list-of-pets {
         row-gap: 28px;
-      }
+    }
 
     .pet-filter {
         font-size: 1.375rem;
-      }
+    }
       
-      .pet-filter button {
+    .pet-filter button {
         font-size: 1.375rem;
-      }
+        cursor: pointer;
+    }
 
+    .pet-filter button:hover {
+        color: #597dff;
+    }
+
+    .pet-filter .active, .pet-filter .active:hover {
+        color: #475AFF;
+        text-decoration: underline;
+    }
+}
+
+@media screen and (min-width: 900px) {
     .page-section-title {
         font-size: 5.31rem;
-      }
+    }
 
     .page-section {
         padding: 130px 16px;
-      }
+    }
 
     .intro-buttons {
-      margin-bottom: 129px;
+        margin-bottom: 129px;
     }    
     .top-section h1 {
-      font-size: 6.25rem;
+        font-size: 6.25rem;
     }
   
     .top-section {
-      padding-top: 139px;
-      padding-bottom: 139px;
+        padding-top: 139px;
+        padding-bottom: 139px;
     }
 }
